# Invoice_Processing-Fraud_Detection

./: Dockerfile  README.md  agent.py  app.py  baseline.py  data_generator.py  env.py  grader.py  inference.py  invoices.db  openenv.yaml  predict.py  pyproject.toml  requirements.txt  streamlit_app.py  tasks.py
server/: app.py
