[project]
name = "invoice-fraud-detection"
version = "0.1.0"
description = "AI Invoice Fraud Detection Agent"
authors = [
    { name = "Sunayana Padhy" }
]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "faker",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:app"
